# CorGIReg

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: question.yaml
.github/workflows/: ci.yml
doc/: CMakeLists.txt
include/BasicGraphIr/: Graph.hpp
include/CompileTool/Common/: AstNode.hpp  ParsingToken.hpp
include/CompileTool/CompileTransitionGraph/: PGInterpreterTG.hpp  PGinterpreterIR.hpp  PartitionGraphLexer.hpp  PartitionGraphParser.hpp  PartitionGraphTokens.hpp
include/NodeTest/: Expression.hpp  ExpressionParser.hpp  FunctionBuilder.hpp  NodeCondition.hpp  NodeDictionary.hpp  PredefinedNodeCondition.hpp
include/TransitionGraph/: MatchSolution.hpp  RunTimeContext.hpp  State.hpp  Transition.hpp  TransitionGraph.hpp
include/Utile/: Utile.hpp
src/BasicGraphIr/: Graph.cpp
src/CompileTool/CompileTransitionGraph/: PGInterpreterIR.cpp  PGInterpreterTG.cpp  PartitionGraphLexer.cpp  PartitionGraphParser.cpp
src/NodeTest/: Expression.cpp  ExpressionParser.cpp  FunctionBuilder.cpp  NodeCondition.cpp  NodeDictionary.cpp  PredefinedNodeCondition.cpp
src/TransitionGraph/: MatchSolution.cpp  RunTimeContext.cpp  State.cpp  Transition.cpp  TransitionGraph.cpp
test/: CMakeLists.txt
test/App/: match_from_start_test.cpp
test/BasicGraphIr/: Graph_test.cpp
test/CompileTool/CompileTransitionGraph/: PGInterpreterIR_test.cpp  PGInterpreterTG_test.cpp  PartitionGraphLexer_test.cpp  PartitionGraphParser_test.cpp
test/NodeTest/: NodeDictionary_test.cpp
test/TransitionGraph/: RunTimeContext_test.cpp  State_test.cpp  TansitionGraph_test.cpp
